# radz-upscaler

./: .gitattributes  .gitignore  README.md  RUNPOD.md  SDXL_SKIN_ENHANCER_SETUP.md  __init__.py  extra_model_paths.radz.yaml  install_runpod_cuda13.sh  pyproject.toml  radz_ipadapter_nodes.py  radz_nodes.py  real_human_detail_node.py  requirements.runpod-cuda13.txt  setup_radz_nodes.ps1
bundled_models/: README.md  ipadapter-model-manifest.txt
radz_human_skin_detailer/: __init__.py  real_human_detail_node.py
radz_insight_face/: __init__.py  utils.py
